--- a/config.json
+++ b/config.json
@@ -11,82 +11,113 @@
     {
       "slug": "hello-world",
       "uuid": "50547bc4-a78e-4450-9412-30bfa46c4a93",
-      "core": false,
+      "core": true,
+      "auto_approve": true,
       "unlocked_by": null,
       "difficulty": 1,
-      "topics": []
+      "topics": [
+        "strings"
+      ]
     },
     {
       "slug": "leap",
       "uuid": "241eb25c-925b-4395-876c-c1dfe84e1c85",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 1,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "logic"
+      ]
     },
     {
       "slug": "accumulate",
       "uuid": "a21065ca-6aad-46b2-ada0-6a62abfcea2b",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 1,
-      "topics": []
+      "topics": [
+        "lists",
+        "mathematics"
+      ]
     },
     {
       "slug": "collatz-conjecture",
       "uuid": "63c77b77-5a02-40ce-b5f6-372a5b3ae13d",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 1,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "pattern_matching"
+      ]
     },
     {
       "slug": "raindrops",
       "uuid": "63259a44-cdec-4e25-ab0e-eddc6f9a9ca1",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 1,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "pattern_matching",
+        "strings"
+      ]
     },
     {
       "slug": "rna-transcription",
       "uuid": "8e9a98b1-bf4f-4c94-a258-a8618cc37f55",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "pattern_matching",
+        "strings"
+      ]
     },
     {
       "slug": "bob",
       "uuid": "fced3620-26f2-4439-822c-27e1d59e24e1",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "pattern_matching",
+        "strings"
+      ]
     },
     {
       "slug": "strain",
       "uuid": "c10bfbab-0b58-4fcb-aadc-304bd4b73cfc",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "lists",
+        "control_flow_conditionals"
+      ]
     },
     {
       "slug": "hamming",
       "uuid": "8b7390fc-da44-4f02-ad17-a7eb5c19cf2b",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "strings"
+      ]
     },
     {
       "slug": "space-age",
       "uuid": "f276e064-a6d4-4a50-b53b-f36c1b30c62f",
-      "core": false,
+      "core": true,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "mathematics",
+        "time"
+      ]
     },
     {
       "slug": "grains",
@@ -94,7 +125,11 @@
       "core": false,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "bitwise_operations",
+        "mathematics",
+        "pattern_matching"
+      ]
     },
     {
       "slug": "isogram",
@@ -102,7 +137,11 @@
       "core": false,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "pattern_matching",
+        "strings"
+      ]
     },
     {
       "slug": "pangram",
@@ -110,7 +149,11 @@
       "core": false,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "control_flow_recursion",
+        "strings"
+      ]
     },
     {
       "slug": "nucleotide-count",
@@ -118,271 +161,376 @@
       "core": false,
       "unlocked_by": null,
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "parsing",
+        "strings"
+      ]
     },
     {
       "slug": "difference-of-squares",
       "uuid": "ab852e36-3968-403f-93f5-53c7ecafa4c8",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "hello-world",
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "control_flow_recursion",
+        "mathematics",
+        "pattern_matching"
+      ]
     },
     {
       "slug": "triangle",
       "uuid": "2972e0de-b5ca-4fdd-9dbf-648937763394",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "leap",
       "difficulty": 2,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "mathematics"
+      ]
     },
     {
       "slug": "sum-of-multiples",
       "uuid": "5af1c90a-f98d-4682-885b-9770c9223194",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "collatz-conjecture",
       "difficulty": 3,
-      "topics": []
+      "topics": [
+        "mathematics"
+      ]
     },
     {
       "slug": "anagram",
       "uuid": "8f0570ae-223f-4da4-8b84-268b797b28ad",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "accumulate",
       "difficulty": 3,
-      "topics": []
+      "topics": [
+        "lists",
+        "filtering",
+        "strings"
+      ]
     },
     {
       "slug": "atbash-cipher",
       "uuid": "d8e38780-d04e-43fc-8606-97dc71e4974b",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "hamming",
       "difficulty": 3,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "strings"
+      ]
     },
     {
       "slug": "phone-number",
       "uuid": "668f3947-3142-485e-89f8-e0e5060be29d",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "space-age",
       "difficulty": 3,
-      "topics": []
+      "topics": [
+        "parsing",
+        "strings"
+      ]
     },
     {
       "slug": "isbn-verifier",
       "uuid": "ba4cd1e4-b5f0-4efc-a4c8-58c5252cae9e",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "strain",
       "difficulty": 3,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "mathematics"
+      ]
     },
     {
       "slug": "gigasecond",
       "uuid": "24ae9a43-4e1c-418b-97f6-2c83dbc0e14a",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "bob",
       "difficulty": 3,
-      "topics": []
+      "topics": [
+        "dates",
+        "mathematics"
+      ]
     },
     {
       "slug": "scrabble-score",
       "uuid": "4f5045d5-9ae1-4bdb-ac0b-a5d279a60ed8",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "rna-transcription",
       "difficulty": 3,
-      "topics": []
+      "topics": [
+        "pattern_matching",
+        "strings"
+      ]
     },
     {
       "slug": "two-fer",
       "uuid": "ea369b85-b180-48ca-b602-c40811fc865f",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "raindrops",
       "difficulty": 3,
-      "topics": []
+      "topics": [
+        "strings"
+      ]
     },
     {
       "slug": "robot-simulator",
       "uuid": "a2d4ca29-54e2-4969-bfc9-ee483acf9caf",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "space-age",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "control_flow_conditionals",
+        "control_flow_recursion"
+      ]
     },
     {
       "slug": "grade-school",
       "uuid": "67bbcc69-31b7-41f2-a8e1-5a07d30e00d6",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "bob",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "pattern_matching"
+      ]
     },
     {
       "slug": "word-count",
       "uuid": "43df8921-f0c3-4a0c-9bdf-eb89405049ad",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "hamming",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "lists",
+        "maps",
+        "strings"
+      ]
     },
     {
       "slug": "clock",
       "uuid": "df90c039-8629-497a-a809-5ba2d1f8d52f",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "strain",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "time"
+      ]
     },
     {
       "slug": "allergies",
       "uuid": "51af2614-e349-4e90-b917-177a6017e786",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "raindrops",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "bitwise_operations"
+      ]
     },
     {
       "slug": "all-your-base",
       "uuid": "85e23906-6fd8-486a-add8-a6c932cef7e3",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "rna-transcription",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "mathematics"
+      ]
     },
     {
       "slug": "series",
       "uuid": "9ca527d7-5065-4856-8c95-07deb664da7e",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "hello-world",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "strings"
+      ]
     },
     {
       "slug": "parallel-letter-frequency",
       "uuid": "be69c23b-7559-44fe-9e21-94a865199de7",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "collatz-conjecture",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "pattern_matching",
+        "strings"
+      ]
     },
     {
       "slug": "roman-numerals",
       "uuid": "d8ee01b3-307e-4835-a7cd-331e771111ae",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "leap",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "pattern_matching",
+        "strings"
+      ]
     },
     {
       "slug": "sieve",
       "uuid": "9cfae4bf-cff8-49bc-aee9-a37d553cef81",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "accumulate",
       "difficulty": 4,
-      "topics": []
+      "topics": [
+        "filtering",
+        "mathematics"
+      ]
     },
     {
       "slug": "largest-series-product",
       "uuid": "b312ff0e-90e3-4dd8-99dc-df4a9deb1907",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "bob",
       "difficulty": 5,
-      "topics": []
+      "topics": [
+        "mathematics",
+        "strings"
+      ]
     },
     {
       "slug": "complex-numbers",
       "uuid": "5fc48c1b-0e1b-47b3-b30a-5281ec364aad",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "leap",
       "difficulty": 5,
-      "topics": []
+      "topics": [
+        "mathematics",
+        "parsing",
+        "strings"
+      ]
     },
     {
       "slug": "rotational-cipher",
       "uuid": "8ad0c97b-189d-46ac-bb72-2c72f1fe4728",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "space-age",
       "difficulty": 5,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "strings"
+      ]
     },
     {
       "slug": "etl",
       "uuid": "60fc4ea6-28b0-4914-bcc3-a0caefca3cb5",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "hamming",
       "difficulty": 6,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "maps",
+        "strings"
+      ]
     },
     {
       "slug": "bank-account",
       "uuid": "a7e2e89c-c599-4e30-a944-a9d4a98f2b94",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "raindrops",
       "difficulty": 6,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "functions",
+        "pattern_matching"
+      ]
     },
     {
       "slug": "luhn",
       "uuid": "e938c3e6-0b0f-498e-a3ec-47251f5bb55c",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "strain",
       "difficulty": 6,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "mathematics"
+      ]
     },
     {
       "slug": "custom-set",
       "uuid": "453aad9b-044e-473e-87c1-0193afb2cb13",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "hello-world",
       "difficulty": 6,
-      "topics": []
+      "topics": [
+        "types"
+      ]
     },
     {
       "slug": "meetup",
       "uuid": "249d0c9f-dadc-4168-ba9b-0c6bfe83618d",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "accumulate",
       "difficulty": 6,
-      "topics": []
+      "topics": [
+        "control_flow_conditionals",
+        "dates"
+      ]
     },
     {
       "slug": "pascals-triangle",
       "uuid": "589b763c-2b3a-11e8-b467-0ed5f89f718b",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "collatz-conjecture",
       "difficulty": 6,
-      "topics": []
+      "topics": [
+        "mathematics",
+        "pattern_matching",
+        "strings"
+      ]
     },
     {
       "slug": "circular-buffer",
       "uuid": "058b48a9-03ec-43bc-88eb-9dbce8b79e59",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "hamming",
       "difficulty": 7,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "types"
+      ]
     },
     {
       "slug": "beer-song",
       "uuid": "2fedc6bf-6006-4c2d-bba7-9c66265b6f62",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "leap",
       "difficulty": 7,
-      "topics": []
+      "topics": [
+        "strings",
+        "text_formatting"
+      ]
     },
     {
       "slug": "zipper",
       "uuid": "b6c242d3-40d5-484d-8466-1a32d2332288",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "bob",
       "difficulty": 8,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "control_flow_recursion",
+        "types"
+      ]
     },
     {
       "slug": "spiral-matrix",
       "uuid": "625ad6f2-c9e8-4129-a290-057209f941c5",
       "core": false,
-      "unlocked_by": null,
+      "unlocked_by": "rna-transcription",
       "difficulty": 8,
-      "topics": []
+      "topics": [
+        "algorithms",
+        "mathematics"
+      ]
     }
   ]
 }
