Add auto_approve to hello-world exercise
This adds the auto_approve property to the hello-world
exercise as part of preparing tracks for the v2 launch.

The current code on the server will automatically approve
hello-world exercises anyway, but that is a temporary fix
and will be removed in the future.

--- a/config.json
+++ b/config.json
@@ -12,6 +12,7 @@
       "slug": "hello-world",
       "uuid": "50547bc4-a78e-4450-9412-30bfa46c4a93",
       "core": false,
+      "auto_approve": true,
       "unlocked_by": null,
       "difficulty": 1,
       "topics": []
