--- a/exercises/difference-of-squares/rebar.config
+++ b/exercises/difference-of-squares/rebar.config
@@ -1,7 +1,7 @@
 %% Erlang compiler options
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, warnings_as_errors]}.
 
-{deps, [{erl_exercism, "0.1.1"}]}.
+{deps, [{erl_exercism, "0.1.2"}]}.
 
 {dialyzer, [
   {warnings, [underspecs, no_return]},
