split installation and running into steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       image: erlang:${{ matrix.otp }}
     steps:
     - uses: actions/checkout@v1
+    - name: Install dependencies
+      run: apt update && apt install --yes jq
     - name: run tests
-      run: |
-        apt update && apt install --yes jq
-        ./bin/journey-test.sh
+      run: ./bin/journey-test.sh
