make configlet fail on purpose

--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
       ]
     },
     {
-      "slug": "two-fer",
+      "slug": "two-ver",
       "uuid": "ea369b85-b180-48ca-b602-c40811fc865f",
       "core": true,
       "unlocked_by": null,
