create an invalid UUID for testing

--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   "exercises": [
     {
       "slug": "hello-world",
-      "uuid": "50547bc4-a78e-4450-9412-30bfa46c4a93",
+      "uuid": "50547bc4-a78e-4450-9412-30bfa46c4a9h",
       "core": true,
       "auto_approve": true,
       "unlocked_by": null,
